Fixed bug with wrong javadoc and userguide upload. Changed remote dir for javadoc and userguide to version number instead of 'release'.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@718 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -6,7 +6,8 @@
 \evensidemargin}{-0.7cm} \setlength{
 \oddsidemargin}{-0.7cm}
 
-\def \API {http://www.gradle.org/api/latest/org/gradle/api/} 
+\input{../../../build/docs/userguide/data/javadocDir}
+\def \API {http://www.gradle.org/\JAVADOCDIR/org/gradle/api/} 
 \def \PKG {org.gradle.api.}
 \def \TUT {../../samples/userguide/tutorial}  
 \def \UGOUT {../../samples/userguideOutput}  
