--- a/src/docs/userguide/warPlugin.tex
+++ b/src/docs/userguide/warPlugin.tex
@@ -19,4 +19,8 @@ Of course one can configure the different file-sets with a closure to define exc
 archive_jar.enabled = true
 \end{Verbatim}
 % section customizing (end)
+\section{Eclipse WTP} % (fold)
+\label{sec:eclipse_wtp}
+\href{\API tasks/ide/eclipse/EclipseWtp.html}{org.gradle.api.tasks.ide.eclipse.EclipseWtp} has a default instance with the name \texttt{eclipseWtp}. It generates a \texttt{.settings/org.eclipse.wst.common.component} file.
+% section eclipse_wtp (end)
 % chapter the_war_plugin (end)
