--- a/src/docs/userguide/buildLifecycle.tex
+++ b/src/docs/userguide/buildLifecycle.tex
@@ -30,13 +30,54 @@ For a build script, the property access and method calls are delegated to a proj
 \label{sec:multi_project_builds}
 A multi-project build is a build where you build more than one project during a single execution of Gradle. You have to declare the projects taking part in the multiproject build in the settings file. 
 There is much more to say about multi-project builds in the chapter dedicated to this topic (see chapter \ref{cha:multi_project_builds}). 
+
+\subsection{Project Locations} % (fold)
+\label{sub:project_locations}
+Multi-project builds are always represented by a tree with a single root. Each element in the tree represent a project. A project has a virtual and a physical path. The virtual path denotes the position of the project in the multi-project build tree. The project tree is created in the settings.gradle file. By default it is assumed that the location of the settings file is also the location of the root project. But you can redefine the location of the root project in the settings file.
+% subsection project_locations (end)
 % section multi_project_builds (end)
+
+\subsection{Building the tree} % (fold)
+\label{sub:building_the_tree}
+In the settings file you can use a set of methods to build the project tree. Hierarchical and flat physical layouts get special support. 
+\subsubsection{Hierarchical Layouts} % (fold)
+\label{ssub:hierarchical_layouts}
+\begin{Verbatim}
+dependencies {
+	include 'project1', 'project2', 'project2/child1'
+}
+\end{Verbatim}
+The include method takes as an argument a relative virtual path to the root project. This relative virtual path is assumed to be equals to the relative physical path of the subproject to the root project. You only need to specify the leafs of the tree. Each parent path of the leaf project is assumed to be another subproject which obeys to the physical path assumption described above.
+% subsubsection hierarchical_layouts (end)
+\subsubsection{Flat Layouts} % (fold)
+\label{ssub:hierarchical_layouts}
+\begin{Verbatim}
+dependencies {
+	includeFlat 'project1', 'project2'
+}
+\end{Verbatim}
+The includeFlat method takes directory names as an argument. Those directories need to exist at the same level as the root project directory. The location of those directories are considered as child projects of the root project in the virtual multi-project tree.
+% subsubsection hierarchical_layouts (end)
+% subsection building_the_tree (end)
+
+\subsection{Modifying Elements of the Project Tree} % (fold)
+\label{sub:modifying_element_of_the_project_tree}
+The multi-project tree created in the settings file is made up of so called project descriptor object. You might modify those descriptor objects in the settings file at any time. To access such a descriptor object you can do:
+\begin{Verbatim}
+dependencies {
+	myDescriptor = descriptor('path_in_multi_project_tree')
+	myOtherDescriptor = descriptor(new File('path_to_projectDir')) 
+}
+\end{Verbatim}
+Via this descriptor you can change the name and the directory of a project.
+% subsection modifying_element_of_the_project_tree (end)
 
 \section{Initialization} % (fold)
 \label{sec:initialization}
-How does Gradle know whether to do a single or multiproject build? In particular as you may not just trigger a multiproject build from the root project, but also from within any subproject taking part in the build.\footnote{Gradle supports partial multiproject builds (see chapter \ref{cha:multi_project_builds})}. If you execute Gradle from within a project that has no settings.gradle file, Gradle does the following:
+How does Gradle know whether to do a single or multiproject build? In you trigger a multiproject build from the directory where the settings file is, things are easy. But Gradle also allows you to execute the build from within any subproject taking part in the build.\footnote{Gradle supports partial multiproject builds (see chapter \ref{cha:multi_project_builds})}. If you execute Gradle from within a project that has no settings.gradle file, Gradle does the following:
 \begin{itemize}
-	\item It searches the parent directories for the existence of a settings.gradle file.
+	\item It searches for a settings.gradle in a directory called 'master' which has the same nesting level as the current dir. 
+	\item If not settings.gradle is found, it searches the parent directories for the existence of a settings.gradle file.
 	\item If no settings.gradle file is found, the build is executed as a single project build.
     \item If a settings.gradle file is found, Gradle checks if the current project is part of the multiproject hierarchy defined in the found settings.gradle file. If not, the build is executed as a single project build. Otherwise a multiproject build is executed.
 \end{itemize}
@@ -45,7 +86,9 @@ What is the purpose of this behavior? Somehow Gradle has to find out, whether th
 	\item a single project build, if the settings.gradle file does not define a multiproject hierarchy
     \item a multiproject build, if the settings.gradle file does define a multiproject hierarchy.
 \end{itemize}
-Gradle creates Project objects for every project taking part in the build. For a single project build this is only one project. For a multi-project build these are the projects specified in Settings object (plus the root project). Each project object has a name equals to the name of its top level folder. The projects form a tree according to there position in the file system. Thus every project except the root project has a parent project and might have child projects. There are no gaps in the project tree. This means every parent folder between a specified project folder and the project root is considered to be a project and is automatically part of the project tree. This means no additional work for you, as a project might have a build script but it is not mandatory (see chapter \ref{cha:multi_project_builds}).
+The auto search for a settings file does only work for multi-project builds with a physical hierarchical or flat layout. For a flat layout you must additionally obey to the naming convention described above. Gradle supports arbitrary physical layouts for a multiproject build. But for such arbitrary layouts you need to execute the build from the directory where the settings file is located. For how to run partial builds from the root see \ref{sec:running_partial_build_from_the_root}. In our next release we want to enable partial builds from subprojects by specifying the location of the settings file as a command line parameter.
+\\
+Gradle creates Project objects for every project taking part in the build. For a single project build this is only one project. For a multi-project build these are the projects specified in Settings object (plus the root project). Each project object has by default a name equals to the name of its top level folder. Every project except the root project has a parent project and might have child projects.
 
 \section{Configuration and Execution of a Single Project Build} % (fold)
 \label{sec:configuration_and_execution_of_a_single_project_build}
