Updated user's guide. Move tutorial scripts into separate directories.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@826 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -11,6 +11,7 @@
 \def \PKG {org.gradle.api.}
 \def \TUT {../../samples/userguide/tutorial}  
 \def \UGOUT {../../samples/userguideOutput}  
+\def \TUTHD {userguide/tutorial/}
 
 \includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
@@ -47,7 +48,7 @@
 \newcommand{\codeGradleFile}[2][]{\VerbatimInput[frame=single,label=#1build.gradle,framesep=1mm]{#2}}
 \newcommand{\outputInput}[1]{\VerbatimInput[frame=single,framesep=1mm,framerule=1mm]{#1}}
 \newcommand{\outputInputGradle}[2][]{\VerbatimInput[frame=single,label=current dir: #1,framesep=1mm,framerule=1mm]{#2}}
-\newcommand{\outputInputTutorial}[1]{\outputInputGradle[tutorial]{#1}}
+\newcommand{\outputInputTutorial}[1]{\outputInputGradle[\TUTHD#1]{\UGOUT/#1.out}}
 \begin{titlepage}
 	\vspace*{\stretch{1}} \HRule 
 	\begin{flushleft}
