Updated user's guide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@959 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -13,7 +13,7 @@
 \def \UGOUT {../../samples/userguideOutput}  
 \def \TUTHD {userguide/tutorial/}
 
-\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
+\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
