--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -368,3 +368,12 @@ dependencies {
 \texttt{WebdavResolver} is a class that implements an Ivy interface and is part of the \emph{Gradle} distribution. An overview of which Resolvers are offered by Ivy and thus also by Gradle can be found \href{http://ant.apache.org/ivy/latest-milestone/configuration/resolvers.html}{here}. With Gradle you just don't configure them via xml but directly via there API.
 % subsection more_about_ivy_resolvers (end)
 % section repositories (end)
+
+\section{Deploying to Maven Repositories} % (fold)
+\label{sec:deploying_to_maven_repositories}
+Gradle allows you to deploy to Maven repositories including support for snapshot deployment. We offer 100 percent compatibility with Maven here as we delegate internally to the Maven Ant tasks under the hood. For uploading to a Maven repository you need a special resolver, the MavenUploadResolver:
+
+\codeGradleFile[pomGeneration - ]{../../../build/distributions/exploded/samples/pomGeneration/build.gradle}
+
+
+% section deploying_to_maven_repositories (end)
