--- a/src/docs/userguide/mavenPoms.tex
+++ b/src/docs/userguide/mavenPoms.tex
@@ -7,34 +7,36 @@
 
 It is essential to have expressiveness regarding what are first level dependencies and what are dependencies of dependencies. See the discussion in \ref{sub:transitive_dependency_management}.
 
-Maven is not always expressive about this. Here is an example of a very common situation. Let's say you want to use dom4j. In Listing~\ref{fakeFirstLevelPom} you can see dom4j's pom.xml as it resides in the repository. Assume you want to use the optional xpath functionality of dom4j. Dom4j needs Jaxen to support this. As not everybody uses the xpath functionality, Jaxen is an optional dependency of dom4j. 
+Maven is not always expressive about this. Here is an example of a very common situation. Let's say you want to use dom4j. In Listing \ref{dom4jPom} you can see dom4j's pom.xml as it resides in the repository. Assume you want to use the optional xpath functionality of dom4j. Dom4j needs Jaxen to support this. As not everybody uses the xpath functionality, Jaxen is an optional dependency of dom4j. 
 
 \begin{figure}
-	\caption{fakeFirstLevelPom}
+	\label{dom4jPom}
+	\caption{dom4j pom.xml}
 	\begin{Verbatim}
-	<project>
-	  <modelVersion>4.0.0</modelVersion>
-	  <groupId>dom4j</groupId>
-	  <artifactId>dom4j</artifactId>
-	  <name>dom4j</name>
-	  <version>1.6.1</version>
-	  ...
-	  <dependencies>
-	    ...
-	    <dependency>
-	      <groupId>jaxen</groupId>
-	      <artifactId>jaxen</artifactId>
-	      <version>1.1-beta-6</version>
-	      <optional>true</optional>
-	    </dependency>
-	   ...
-	  </dependencies>
-	</project>	
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>dom4j</groupId>
+  <artifactId>dom4j</artifactId>
+  <name>dom4j</name>
+  <version>1.6.1</version>
+  ...
+  <dependencies>
+    ...
+    <dependency>
+      <groupId>jaxen</groupId>
+      <artifactId>jaxen</artifactId>
+      <version>1.1-beta-6</version>
+      <optional>true</optional>
+    </dependency>
+   ...
+  </dependencies>
+</project>	
 	\end{Verbatim}	
 \end{figure}
 
 \begin{figure}
-	\caption{useDom4jPom}
+	\label{fakeFirstLevelPom}
+	\caption{Fake first level dependencies}
 	\begin{Verbatim}
 <project>
   <modelVersion>4.0.0</modelVersion>
@@ -61,7 +63,7 @@ Maven is not always expressive about this. Here is an example of a very common s
 	\end{Verbatim}	
 \end{figure}
 
-To use dom4j with XPath support, you have to declare Jaxen as a first level dependency (see \ref{useDom4jPom} and the build expresses no longer, that Jaxen is used in this project only as a dependency of dom4j. If Jaxen is additionally a first level dependency or an optional transitive dependency of another first level dependency you’re back in the jar hell, because you don’t know which dependencies to remove if some others are not needed any longer. If Maven would introduce an include tag for a dependency description of dom4j one could express this situation properly, although you have to do it in every client pom. I don’t know if this is work in progress. With Ivy you can define multiple configurations for dom4j to solve the situation. In this case you might define a default configuration and a xpath-configuration in the ivy.xml which resides in your repository. You can also use Gradle's \emph{Client Module Dependencies} (see \ref{ssub:client_module_dependencies}) to solve this problem. Both solutions do correctly express what are first level and what are transitive dependencies. If you have your own repository you could define your custom pom for dom4j which includes xpath as required. But if another of your projects needs dom4j without xpath, it has to explicitly add an exclude for this. Basically Maven makes it very hard to work with such situations. Therefore many projects go for the simplest approach as described in Listing \ref{useDom4jPom} with the tradeoff that they have a wrong description of there first level dependencies.
+To use dom4j with XPath support, you have to declare Jaxen as a first level dependency (see \ref{fakeFirstLevelPom} and the build expresses no longer, that Jaxen is used in this project only as a dependency of dom4j. If Jaxen is additionally a first level dependency or an optional transitive dependency of another first level dependency you’re back in the jar hell, because you don’t know which dependencies to remove if some others are not needed any longer. If Maven would introduce an include tag for a dependency description of dom4j one could express this situation properly, although you have to do it in every client pom. I don’t know if this is work in progress. With Ivy you can define multiple configurations for dom4j to solve the situation. In this case you might define a default configuration and a xpath-configuration in the ivy.xml which resides in your repository. You can also use Gradle's \emph{Client Module Dependencies} (see \ref{ssub:client_module_dependencies}) to solve this problem. Both solutions do correctly express what are first level and what are transitive dependencies. If you have your own repository you could define your custom pom for dom4j which includes xpath as required. But if another of your projects needs dom4j without xpath, it has to explicitly add an exclude for this. Basically Maven makes it very hard to work with such situations. Therefore many projects go often for the simplest approach as described in Listing \ref{fakeFirstLevelPom} with the tradeoff that they have a wrong description of there first level dependencies.
 
 % subsection mavens_fake_first_level_dependencies (end)
 
@@ -75,13 +77,9 @@ Maven's lack of multiple configurations for a module also causes another problem
 
 \section{Duplicate Dependencies} % (fold)
 \label{sec:duplicate_dependencies}
-Let's say you want to use dom4j and some other project. Let's say you want to use an XPP reader with dom4j. As this is an optional dependency, you have to do the same as described in \ref{firstleveldeps}. You have to misleadingly declare xpp3 as a first level dependency. Imagine you need also XStream in your project. XStream has a non optional dependency to xpp3\_min (a subset of xpp3). Either you end up with xpp3 and xpp3\_min in your classpath. Or you have to do say:
+Let's say you want to use dom4j and some other project. Let's say you want to use an XPP reader with dom4j. As this is an optional dependency, you have to do the same as described in \ref{firstleveldeps}. You have to misleadingly declare xpp3 as a first level dependency. Imagine you need also XStream in your project. XStream has a non optional dependency to xpp3\_min (a subset of xpp3). Either you end up with xpp3 and xpp3\_min in your classpath. Or you have to exclude xpp3\_min from XStream. The latter says on first sight. XStream does not need xpp3. Which is not the case. This is a common problem. For example cglib and cglib\_full, spring (which is all of spring) and spring-context, spring-....
 
-The latter says on first sight. XStream does not need xpp3. Which is not the case. How to understand the dependencies in a larger build if you have those kind of mechanisms?
-
-This is a common problem. For example cglib and cglib\_full, spring (which is all of spring) and spring-context, spring-....
-
-Neither Ivy nor Gradle offer a solution to this problem yet.
+Neither Maven, Ivy nor Gradle offer a solution to this problem yet.
 % subsection duplicate_dependencies (end)
 
 % chapter the_problem_with_mavens_dependency_management (end)
