--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -373,7 +373,8 @@ dependencies {
 \label{sec:deploying_to_maven_repositories}
 Gradle allows you to deploy to Maven repositories including support for snapshot deployment. We offer 100 percent compatibility with Maven here as we delegate internally to the Maven Ant tasks under the hood. For uploading to a Maven repository you need a special resolver, the MavenUploadResolver:
 
-\codeGradleFile[pomGeneration - ]{../../../build/distributions/exploded/samples/pomGeneration/build.gradle}
+\codeGradleFile[pomGeneration - ]{../../samples/pomGeneration/build.gradle}
+
 
 
 % section deploying_to_maven_repositories (end)
