--- a/src/docs/userguide/buildLifecycle.tex
+++ b/src/docs/userguide/buildLifecycle.tex
@@ -20,7 +20,7 @@ A Gradle build has three distinct phases.
 Beside the build script files, Gradle defines a settings file. The settings file is determined by Gradle via a naming convention. The default name for this file is \emph{settings.gradle}. Later in this chapter we explain, how Gradle looks for a settings file.
 
 The settings file gets executed during the initialization phase. A multiproject build must have a settings.gradle file in the root project of the multiproject hierarchy. It is required because in the settings.gradle file it is defined, which projects are taking part in the multi-project build (see chapter \ref{cha:multi_project_builds}). For a single-project build, a settings.gradle file is optional. You might need it for example, to add libraries to your build script classpath (see chapter \ref{cha:organizing_build_logic}). Let's first do some introspection with a single project build:
-\VerbatimInput[frame=single,label=settings.gradle]{../../../build/distributions/exploded/samples/userguide/buildlifecycle/settings.gradle}
+\VerbatimInput[frame=single,label=settings.gradle]{../../samples/userguide/buildlifecycle/settings.gradle}
 \VerbatimInput[frame=single,label=build.gradle]{../../samples/userguide/buildlifecycle/build.gradle}
 \outputInputGradle[userguide/buildlifecycle]{../../samples/userguideOutput/buildlifecycle.out}
 For a build script, the property access and method calls are delegated to a project object. Similarly property access and method calls within the settings file is delegated to a settings object. Have a look at \href{\API Settings.html}{\PKG Settings}.
