--- a/src/docs/userguide/thisAndThat.tex
+++ b/src/docs/userguide/thisAndThat.tex
@@ -26,28 +26,30 @@ Every task has also a \texttt{enabled} flag which defaults to \texttt{true}. Set
 
 \section{Console Output}
 All available command line options are listed in Appendix \ref{cha:command_line}. You can also print them to your console with \texttt{gradle -h}. We want to look at the \emph{console output} options in more detail. 
-\\
 
-\centerline{\textbf{Loglevel}}
-\medskip
+\begin{table}
+	\begin{center}
+    \begin{tabular}{|l|l|} \hline
+    Option & Meaning  \\ \hline
+    neither \texttt{q} nor \texttt{d} & Gradle and Ant will print out info log messages.  \\ \hline
+    \texttt{q} & Only errors are printed to the console.  \\ \hline
+    \texttt{d} & Gradle and Ant will print out info and debug log messages. \\ \hline
+    \end{tabular}
+	\end{center}
+	\caption{Log Level}
+\end{table}
 
-\begin{tabular}{|l|l|} \hline
-Option & Meaning  \\ \hline
-neither \texttt{q} nor \texttt{d} & Gradle and Ant will print out info log messages.  \\ \hline
-\texttt{q} & Only errors are printed to the console.  \\ \hline
-\texttt{d} & Gradle and Ant will print out info and debug log messages. \\ \hline
-\end{tabular}
-\medskip
-
-\centerline{\textbf{Stacktraces}}
-\medskip
-
-\begin{tabular}{|l|p{15cm}|} \hline
-Option & Meaning  \\ \hline
-neither \texttt{s} nor \texttt{f} & No stacktraces are printed to the console in case of a build error (e.g. a compile error). Only in case of internal exceptions will stacktraces be printed. If the loglevel option \texttt{d} is chosen, truncated stacktraces are always printed. \\ \hline
-\texttt{s} & Truncated stacktraces are printed. We recommend this over full stacktraces. Groovy full stacktraces are extremely verbose (Due to the underlying dynamic invocation mechanisms. Yet they usually do not contain relevant information for what has gone wrong in \emph{your} code.)  \\ \hline
-\texttt{f} & The full stacktraces are printed out. \\ \hline
-\end{tabular}
+\begin{table}
+	\begin{center}
+    \begin{tabular}{|l|p{15cm}|} \hline
+    Option & Meaning  \\ \hline
+    neither \texttt{s} nor \texttt{f} & No stacktraces are printed to the console in case of a build error (e.g. a compile error). Only in case of internal exceptions will stacktraces be printed. If the loglevel option \texttt{d} is chosen, truncated stacktraces are always printed. \\ \hline
+    \texttt{s} & Truncated stacktraces are printed. We recommend this over full stacktraces. Groovy full stacktraces are extremely verbose (Due to the underlying dynamic invocation mechanisms. Yet they usually do not contain relevant information for what has gone wrong in \emph{your} code.)  \\ \hline
+    \texttt{f} & The full stacktraces are printed out. \\ \hline
+    \end{tabular}
+	\end{center}
+	\caption{Stacktraces}
+\end{table}
 
 \section{Directory Creation} % (fold)
 \label{sec:directory_creation}
