GRADLE-221: - Added int test for task dependency samples in userguide (and fixed the samples so they worked) - Renamed master.tex to userguide.tex - Fixed dependency for 'explodedDist' in gradle build so that it actually builds the exploded dist
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@962 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/buildLifecycle.tex
+++ b/src/docs/userguide/buildLifecycle.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The Build Lifecycle} % (fold)
 \label{cha:the_build_lifecycle}
 We said earlier, that the core of Gradle is a language for dependency based programming. In Gradle terms this means that you can define tasks and dependencies between tasks. Gradle guarantees that those tasks are executed in the order of their dependencies and are executed only once. Those tasks form an \href{http://en.wikipedia.org/wiki/Directed_acyclic_graph}{Directed Acyclic Graph}. There are build tools that build up such a DAG as they execute there tasks. Gradle builds the complete DAG \emph{before} any task is executed. This lies at the heart of Gradle and makes many things possible which would not be possible otherwise. 
