--- a/src/docs/userguide/buildscripts.tex
+++ b/src/docs/userguide/buildscripts.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The Gradle Core Tutorial}
 \label{cha:gradle_core_tutorial}
 If you execute a build, Gradle normally looks for a file called \texttt{build.gradle} in the current directory (There are command line switches to change this behavior. See Appendix \ref{cha:command_line}). We call the build.gradle a build script. Although strictly speaking it is a build configuration script, as we see later. In Gradle the location of the build script file defines a project. The name of the directory containing the build script is the name of the project.  
