--- a/src/docs/userguide/introduction.tex
+++ b/src/docs/userguide/introduction.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{Introduction}
 We would like to introduce Gradle to you, a build system that we think is a quantum leap for build technology in the Java (JVM) world. Gradle provides:
 \begin{itemize}
