--- a/src/docs/userguide/javaTutorial.tex
+++ b/src/docs/userguide/javaTutorial.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The Java Projects Appetizer} % (fold)
 \label{cha:the_java_projects_tutorial}
 We have in-depth coverage with many examples about the Java plugin, the dependency management and multi-project builds in the later chapters. In this chapter we want to give you just a first idea.
