--- a/src/docs/userguide/mavenPoms.tex
+++ b/src/docs/userguide/mavenPoms.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The problem with Mavens dependency management} % (fold)
 \label{cha:the_problem_with_mavens_dependency_management}
 
