--- a/src/docs/userguide/potentialTraps.tex
+++ b/src/docs/userguide/potentialTraps.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{Potential Traps} % (fold)
 \label{cha:potential_traps}
 \section{Groovy Script Variables} % (fold)
