--- a/src/docs/userguide/projectTaskApi.tex
+++ b/src/docs/userguide/projectTaskApi.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The Project and Task API} % (fold)
 \label{cha:the_project_and_task_api}
 
