--- a/src/docs/userguide/thisAndThat.tex
+++ b/src/docs/userguide/thisAndThat.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The 'This And That' Tutorial} % (fold)
 \label{cha:the_this_and_that_tutorial}
 \section{Skipping Tasks}
