--- a/src/docs/userguide/groovyPlugin.tex
+++ b/src/docs/userguide/groovyPlugin.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The Groovy Plugin} % (fold)
 \label{cha:the_groovy_plugin}
 The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\footnote{We don't recommend this, as the Groovy plugin uses the \emph{Groovyc} Ant task to compile the sources. For pure Java projects you might rather stick with pure \texttt{javac}. In particular as you would have to supply a groovy jar for doing this.}, with mixed Java and Groovy projects and with pure Groovy projects. The Groovy plugin does not add any tasks. It modifies some of the tasks of the JavaPlugin and adds to the \emph{Convention} object. See Table \ref{groovylayout}, Table \ref{groovyconvention} and Table \ref{groovyconventionFloatingDir}. It also add a new dependency configuration \texttt{groovy}. 
