--- a/src/docs/userguide/ideSupport.tex
+++ b/src/docs/userguide/ideSupport.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{Existing IDE Support and how to cope without it} % (fold)
 \label{cha:ide_support}
 \section{IntelliJ} % (fold)
