--- a/src/docs/userguide/warPlugin.tex
+++ b/src/docs/userguide/warPlugin.tex
@@ -1,4 +1,4 @@
-%!TEX root = master.tex
+%!TEX root = userguide.tex
 \chapter{The War Plugin} % (fold)
 \label{cha:the_war_plugin}
 The war plugin extends the JavaPlugin. It disables the default jar archive generation of the Java Plugin and adds a default war archive task. Have also a look at \href{\API tasks/bundling/War.html}{org.gradle.api.tasks.bundling.War}.
