Minor doc changes
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1013 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/tasks.tex
+++ b/src/docs/userguide/tasks.tex
@@ -49,7 +49,7 @@ If you pass a closure to the \texttt{createTask()} method, this closure gets add
 \section{Adding Dependencies to Tasks}
 \label{sec:adding_dependencies_to_tasks}
 There are several ways you can define the dependencies of a task. In section \ref{sec:task_dependencies} you were
-introduced to defining dependencies using task names. Task names can refer to tasks the same project as the task, or
+introduced to defining dependencies using task names. Task names can refer to tasks in the same project as the task, or
 to tasks in other projects. To refer to a task in another project, you prefix the name of the task with the path of the
 project it belongs to. Below is an example which adds a dependency from \texttt{projectA:taskX} to
 \texttt{projectB:taskY}:
