--- a/src/docs/userguide/userguide.tex
+++ b/src/docs/userguide/userguide.tex
@@ -13,7 +13,7 @@
 \def \UGOUT {../../samples/userguideOutput}  
 \def \TUTHD {userguide/tutorial/}
 
-\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
+\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -79,6 +79,7 @@
 \include{overview} 
 \include{projectTaskApi} 
 \include{tasks} 
+\include{logging} 
 \include{plugins} 
 \include{javaPlugin} 
 \include{groovyPlugin}
