Updated user's guide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1077 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/javaPlugin.tex
+++ b/src/docs/userguide/javaPlugin.tex
@@ -207,6 +207,10 @@ You can further customize the names by passing arguments to archive method of th
 \codeInput{../../samples/userguide/tutorial/zipWithArguments/build.gradle}
 \outputInputTutorial{zipWithArguments}
 % subsection adding_archives (end)
+\subsection{Configuration Action} % (fold)
+\label{sub:configuration_action}
+t.b.d.
+% subsection configuration_action (end)
 
 \section{Archive Tasks} % (fold)
 \label{sec:archive_tasks}
