--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -50,37 +50,40 @@ Dependencies are grouped in configurations. Configurations have a name and they 
 A dependency can belong to more than one configuration although that might be rather the exception. What is a dependency after all and how do you add it to a configuration?
 % subsection configurations (end)
 
-\subsection{Artifact Dependencies} % (fold)
-\label{sub:artifact_dependencies}
-To add an artifact dependency to let's say the \texttt{compile} configuration you simply type:
-\begin{Verbatim}
-dependencies {
-	compile "org.apache.ant:ant-junit:1.7.0:jar"
-}
-\end{Verbatim}
-An artifact dependency is just a file, usually a jar file. The notation for such a dependency follows the  pattern: \texttt{[group]:[artifact]:[version]@[extension]} or \texttt{[group]:[artifact]:[version]:[classifier]@[extension]}.\footnote{Some depedencies in the Maven repository use classifiers, for example TestNG. A declaration would look like this: \texttt{"org.testng:testng:5.8:jdk15@jar"}. But they are not very common.} Gradle needs a repository somewhere where this artifact can be found, but there is \texttt{no} xml descriptor required in the repository. If there is one, it is ignored. In the simplest case such a repository is a folder on your local machine. 
-% subsection artifact_dependencies (end)
-
 \subsection{Module Dependencies} % (fold)
 \label{sub:module_dependencies}
-Here is an example for a module dependency:
+Module dependencies are the most common dependencies. They correspond to a dependency in a repository you have declared. Gradle provides different notations for module dependencies. The most common notation for such a dependency follows the  pattern: \texttt{[group]:[artifact]:[version]}. Here is an example for a module dependency:
 \begin{Verbatim}
 dependencies {
 	compile "org.hibernate:hibernate:3.0.5"
 }
 \end{Verbatim}
-The notation here is the same as for \emph{artifact dependencies} except that you don't specify a file extension. If you declare a module dependency, Gradle looks in the repositories if there is either a Maven pom file or an ivy.xml file for this module. If there is no such XML file, Gradle either tries to download a jar with the same signature as the module dependency or throws an exception (or both, if this jar can't be found). It is configurable whether a XML descriptor for a module dependency is required. This is a per-repository configuration.
+If you declare such a dependency, Gradle looks for a corresponding module descriptor file (pom.xml or ivy.xml) in the repositories. If such a module descriptor file exists, it is parsed and the artifacts of this module (in this case hibernate-3.0.5.jar) as well as its dependencies are downloaded. If no such module descriptor file exists, Gradle looks for a file called hibernate-3.0.5.jar to download.
 
-If the module descriptor (e.g. pom.xml) declares dependencies you don't want you have, you can exclude them. Gradle offers the following notation:
-\begin{Verbatim}
+A module dependency has an API to allow for further configuration. For example if the module descriptor (e.g. pom.xml) declares dependencies you don't want you have, you can exclude them: \begin{Verbatim}
 dependencies {
-	addDependency(['compile'], "org.codehaus.groovy:groovy-all:1.5.4") {
+	compile("org.codehaus.groovy:groovy-all:1.5.4") {
 	        exclude(module: 'jline')
-	        exclude(module: 'junit')
+	        exclude(org: 'junit', module: 'junit')
 	}
 }
 \end{Verbatim}
-The \texttt{exclude} method simply delegates to \texttt{excludeRules.add()}. In subsection \ref{globalExcludes} you will find further details on exclude handling.
+Have a look at \href{\API dependencies/ModuleDependency.html}{org.gradle.api.dependencies.ModuleDependency} to learn more about the API. 
+
+\subsubsection{Classifiers} % (fold)
+\label{ssub:classifiers}
+The Maven dependency management has the notion of classifiers. Gradle supports this. To use Classifiers in Maven you can type: \texttt{"org.testng:testng:5.8:jdk15"}.
+% subsubsection classifiers (end)
+\subsubsection{Artifact only notation} % (fold)
+\label{ssub:artifact_dependencies}
+An artifact only notation creates a module dependency which only downloads one artifact file. The notation for such a dependency follows the  pattern: \texttt{[group]:[artifact]:[version]@[extension]} or \texttt{[group]:[artifact]:[version]:[classifier]@[extension]}. For example:
+\begin{Verbatim}
+dependencies {
+	compile "org.apache.ant:ant-junit:1.7.0@jar"
+}
+\end{Verbatim}
+Gradle needs a repository somewhere where this artifact can be found, but there is \texttt{no} xml descriptor required in the repository. If there is one, it is ignored. In the simplest case such a repository is a folder on your local machine. 
+% subsubsection artifact_dependencies (end)
 % subsection module_dependencies (end)
 
 \subsection{Client Module Dependencies} % (fold)
@@ -95,9 +98,9 @@ addClientModule(confs: ['compile'], id: "org.codehaus.groovy:groovy-all:1.5.4") 
     }
 }
 \end{Verbatim}
-This declares a dependency of your project on Groovy. Groovy itself has dependencies. But Gradle does not look for an xml descriptor to figure them out but gets the information from the build file. The dependencies of a client module can be normal module dependencies or artifact dependencies or another client module.
+This declares a dependency of your project on Groovy. Groovy itself has dependencies. But Gradle does not look for an xml descriptor to figure them out but gets the information from the build file. The dependencies of a client module can be normal module dependencies or artifact dependencies or another client module. Have also a look at \href{\API dependencies/ClientModule.html}{org.gradle.api.dependencies.ClientModule}.
 
-In the current release \emph{Client Modules} have one limitation. For example if your project is a library and you want this library to be uploaded to your company's Maven or Ivy repository. Gradle uploads the jars of your project to the company repository together with the XML descriptor file of the dependencies. If you use \texttt{Client Modules} the dependency declaration in the XML descriptor file is not correct. We try to fix this for the next release of Gradle.
+In the current release \emph{Client Modules} have one limitation. For example if your project is a library and you want this library to be uploaded to your company's Maven or Ivy repository. Gradle uploads the jars of your project to the company repository together with the XML descriptor file of the dependencies. If you use \texttt{Client Modules} the dependency declaration in the XML descriptor file is not correct. We try to improve this in a future release of Gradle.
 % subsection client_module_dependencies (end)
 
 \subsection{Project dependencies} % (fold)
@@ -108,6 +111,8 @@ dependencies {
     compile project(':shared')
 }
 \end{Verbatim}
+Have also a look at \href{\API dependencies/ProjectDependency.html}{org.gradle.api.dependencies.ProjectDependency}.
+
 Multi-project builds are discussed in chapter \ref{cha:multi_project_builds}.
 % subsection project_dependencies (end)
 
@@ -123,7 +128,7 @@ You can either specify only the organization (group) or only the module name. Gr
 for this. Ivy has a very powerful exclude handling including regex patterns. To make full use of this you can create an Ivy exclude rule by your self and add it to the exclude rules.
 \begin{Verbatim}
 dependencies {
-    excludeRules.getRules().add(new DefaultExcludeRule(new ArtifactId(
+    excludeRules.getNativeRules().add(new DefaultExcludeRule(new ArtifactId(
           new ModuleId('someorg', 'somemodule'), 
 		  PatternMatcher.ANY_EXPRESSION,
           PatternMatcher.ANY_EXPRESSION,
@@ -131,12 +136,17 @@ dependencies {
           ExactPatternMatcher.INSTANCE, null));
 }
 \end{Verbatim}
-See the Ivy documentation for more details. 
+Have also a look at \href{\API dependencies/ExcludeRuleContainer.html}{org.gradle.api.dependencies.ExcludeRuleContainer}.
+
 % subsection global_excludes (end)
 
 \subsection{Ivy dependencies} % (fold)
 \label{sub:ivy_dependencies}
-Gradle offers its own notation to describe dependencies. Under the hood we transform them into ivy dependency objects. Our notation provides only a subset of what is possible with Ivy. If you want or need to use options of Ivy not offered by our notation you can pass ivy dependency objects directly to Gradle.
+Gradle offers its own notation to describe dependencies. Under the hood we transform them into ivy dependency objects. Our notation provides a large subset of what is possible with Ivy. If you want or need to options that can't be expresses by the Gradle domain, you have two options: 
+
+You can use our ivy transforms to modify the Ivy objects created by Gradle. Look at the Javadoc \href{\API dependencies/Dependency.html}{org.gradle.api.dependencies.Dependency} to learn more.
+
+Or you can pass ivy dependency objects directly to Gradle.
 \begin{Verbatim}
 DefaultDependencyDescriptor dependencyDescriptor = new DefaultDependencyDescriptor(
 	        new ModuleRevisionId(new ModuleId('junit', 'junit'), '4.2'), false)
@@ -368,13 +378,3 @@ dependencies {
 \texttt{WebdavResolver} is a class that implements an Ivy interface and is part of the \emph{Gradle} distribution. An overview of which Resolvers are offered by Ivy and thus also by Gradle can be found \href{http://ant.apache.org/ivy/latest-milestone/configuration/resolvers.html}{here}. With Gradle you just don't configure them via xml but directly via there API.
 % subsection more_about_ivy_resolvers (end)
 % section repositories (end)
-
-\section{Deploying to Maven Repositories} % (fold)
-\label{sec:deploying_to_maven_repositories}
-Gradle allows you to deploy to Maven repositories including support for snapshot deployment. We offer 100 percent compatibility with Maven here as we delegate internally to the Maven Ant tasks under the hood. For uploading to a Maven repository you need a special resolver, the MavenUploadResolver:
-
-\codeGradleFile[pomGeneration - ]{../../samples/pomGeneration/build.gradle}
-
-
-
-% section deploying_to_maven_repositories (end)
